--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             <div tempo="4000" final="true">
                 <p>Assim como você fez com a minha.</p>
             </div>
-        </div>
-
+        </div> 
+       
         <div id="tela8" class="tela-centro tela" fundo="fundo4" tempo="6000">
          
             <p>E eu quero te mostrar isso.</p>
@@ -151,8 +151,8 @@
                 <p><strong class="letra-vermelha">E quando digo interesse</strong>, é a vontade de conhecer, conversar e me envolver nos seus assuntos.</p>
                 <p><strong class="letra-vermelha">Conversas</strong> que demoram horas para serem lidas e mais horas para serem respondidas.</p>
                 <img src="imagens/tela8-2.png" alt=""> <!-- mudar foto -->
-                <p><strong class="letra-vermelha">centenas de mensagens</strong> e tudo isso nao chega aos pés das milhares de coisas que ainda quero saber sober você.</p>
-                <p><strong class="letra-vermelha">110 mensagens</strong>, colocadas em uma conversa real, está muito longe das milhões de palavras que ainda quero muito ouvir você falar.</p>
+                <p><strong class="letra-vermelha">centenas de mensagens</strong> e assuntos sem fim, tudo isso nao chega aos pés das milhares de coisas que ainda quero saber sober você.</p>
+                <p><strong class="letra-vermelha">IMPORTANTE</strong>, rsrs palavras postas em uma conversa real, está muito longe das milhões de palavras que ainda quero muito ouvir você falar.</p>
 
             </div>
 
@@ -166,16 +166,16 @@
                 <div class="text-center">
                     <h2 class="letra-vermelha">2. Momentos marcantes</h2>
                     <img src="imagens/tela9-1.png" alt="">
-                    <p class="letra2" style="font-size: 0.8em;"><strong>Essa é minha foto favorita sua.</strong></p>
+                    <p class="letra2" style="font-size: 0.8em;"><strong>Essa uma das minhas fotos favoritas.</strong></p>
                 </div>
                 <hr>
-                <p><span class="letra2 letra-vermelha" style="font-size: 1em;">Eu me apaixonei por você mais de uma vez.</span><br>Lembra das diversas vezes que eu fiz cara de bobo e você me perguntou <strong class="text-muted">"O que foi? Por que está me olhando desse jeito?"</strong> e eu respondi <strong class="text-muted">"Nada não"</strong>?</p>
+                <p><span class="letra2 letra-vermelha" style="font-size: 1em;">Eu me apaixonei por você mais de uma vez.</span><br>Lembra das diversas vezes que eu fiz cara de bobo e você me perguntou <strong class="text-muted">"O que foi? Por que está me olhando desse jeito?"</strong> e eu respondi <strong class="text-muted">"Nada rsrs"</strong>?</p>
                 <p>Cada uma dessas caras foi quando me descobri apaixonado por você, e vou te contar quais foram:</p>
                 <ul>
-                    <li><strong class="letra-vermelha">A primeira vez</strong> foi na lagoa. Estavamos sentados no banco, eu encostei minha mão no encosto apoiando meu rosto e fazendo um sorriso completamente besta, enquanto você falava. Naquele momento, eu não estava ouvindo nenhuma palavra sua, apenas pensando <strong class="text-muted">"Cara, ela é demais!"</strong>. Esse foi o primeiro momento que me apaixonei pro você.</li>
-                    <li><strong class="letra-vermelha">Quando saímos pela segunda vez</strong>, me lembro perfeitamente: eu estava parado na porta da sua casa, encostado no carro esperando você sair. Eu não consigo explicar o que senti quando vi você descendo as escadas, era como se o tempo tivesse parado ali. Foi quando vi você pela primeira vez com seus cabelos cacheados, e nesse momento eu já sabia que estava apaixonado pela segunda vez.</li>
-                    <li><strong class="letra-vermelha">A terceira vez</strong> foi quando saímos e paramos o carro de frente ao céu estrelado. Estavamos conversando bastante, mas em certo momento, o assunto acabou e ficamos só olhando para frente, para o céu. Eu lembro que eu queria muito falar tudo isso que estou escrevendo agora, mas não fiz. Eu só peguei na sua mão, apertei com força e dei um beijo. Dali em diante eu só queria pensar em momentos como aquele onde pudessemos estar juntos, sem mais ninguém, apenas na companhia um do outro olhando o céu e pensando que não significamos nada no universo, mas de uma forma íntima, significamos muito um para o outro. </li>
-                    <li><strong class="letra-vermelha">Bom, a quarta vez</strong> foi quando eu acordei do seu lado na cama no dia que dormimos juntos em Franca. Quando acordei, por alguns instantes eu pensei que ainda estava sonhando em ter você ali. Olhei para você alguns segundos e pensei que aquilo era uma das melhores coisas que tinha me acontecido nos últimos anos, e que eu tinha me apaixonado mais uma vez.</li>
+                    <li><strong class="letra-vermelha">A primeira vez</strong> foi no ponto de Bus da facul. Estavamos esperando e eu tava com aquela camisa long line e usando Ferrari Black, você respirou perto de mim e falou como eu tava cheiroso e bonito e que a gente iria ficar na volta! <strong class="text-muted">"AAAAAAAAA"</strong>. Foi o que eu gritei mentalmente rsrs, eu não lembro de nada da aula, tudo que eu pensava era em acabar logo e te ver na volta e assim eu acho que voçê sabe bem como essa historia terminou!!! <strong class="text-muted">Eu fiquei completamente para baixo kkk por que nao deu certo</strong>  Esse foi o primeiro momento que me apaixonei pro você.</li>
+                    <li><strong class="letra-vermelha">Pela segunda vez</strong>, me lembro perfeitamente: eu estava teoricamente bebado ksksks, na festa da minha amiga da facul Maria, e la enquanto jogava domino, eu estava falando contigo e pensando quando iriamos ficar de novo.</li>
+                    <li><strong class="letra-vermelha">A terceira vez</strong> foi quando saímos para praia de galera em guarajuba, haha foi um role muito louco, acredito eu que não preciso dar detalhes, mas acho que ali foi que eu tomei minha decisão kkk depois de 4 anos analizando o terreno, o jogador entrou em campo para marcar um golaço. </li>
+                    <li><strong class="letra-vermelha">Bom, a quarta vez</strong> acho eu que a 4 e todas adiante é exatamente quando a gente conversa, voçê diz que gosta de mim, faz um esforço ali por mim, me ajuda e tudo isso em seus minimos detalhes acredito eu rsrs.</li>
                 </ul>
 
                 <hr>
@@ -199,23 +199,26 @@
                 <div class="text-center">
                     <h2 class="letra-vermelha">3. O que você mudou em mim</h2>
                     <img src="imagens/tela10.png" alt="">
-                    <p class="letra2" style="font-size: 0.8em;"><strong>Essa foto eu tirei na lagoa, no segundo dia que eu saí para jogar basquete.</strong></p>    
+                    <p class="letra2" style="font-size: 0.8em;"><strong>Essa eu nâo faço ideia de quando foi, mas eu tenho a plena certeza que voçê sabe !</strong></p>    
                 </div>
                 <hr>
                 <p class="letra-vermelha"><strong>O que isso tem a ver, você se perguntaria?</strong></p>
-                <p>Antes de começarmos a estar juntos, eu estava há 3 anos sem jogar basquete, e há mais de 4 anos sem correr, completamente parado.</p>
-                <p>Essa motivação de estar voltando com tudo de uma vez, está completamente relacionada ao que <strong class="letra-vermelha">você</strong> causou em mim.</p>
+                <p>Antes de começarmos a estar juntos,na epoca em que eramos apenas amigos, voce ja tinha uma memoria fenomenal e quis deixar isso claro aqui, pois nao importa a situação, ou momento voçê acaba lembrando kkk e eu quase sempre esqueço de tudo.</p>
+                <p>Então o que seria da minha pessoa sem <strong class="letra-vermelha">você</strong> e sua incrivel habilidade de lembrar de tudo.</p>
                 <hr>
-                <p>Para mim, estava fora de cogitação voltar a morar em Guaíra.</p>
-                <p>O que eu iria fazer aqui? Não conheço ninguém, não tenho nada nessa cidade.</p>
-                <p class="letra-vermelha"><strong>Pelo menos antes de você.</strong></p>
+                <p class="letra-vermelha"><strong>Amor da minha vida
+                   <p> Daqui até a eternidade</p>
+                    <p>Nossos destinos foram traçados</p>
+                    <p>Na maternidade</p>
+                    <p>Paixão cruel, desenfreada</p>
+                    <p>Te trago mil rosas roubadas</p>
+                    <p>Pra desculpar minhas mentiras</p>
+                    <p>Minhas mancadas</p>
+                    <p>Exagerado</p>
+                    <p>Jogado aos teus pés</p>
+                    </strong></p>
                 <hr>
-                <p><strong class="letra-vermelha">Você</strong> quem me fez querer voltar para Guaíra, para estar mais perto e junto de você.</p>
-                <p><strong class="letra-vermelha">Você</strong> quem me fez querer voltar a fazer atividades físicas, para me manter saudável e a boa aparência para você.</p>
-                <hr>
-                <p>As vezes me pego pensando no que teria acontecido se eu não tivesse você.</p>
-                <p>Estaria morando em Franca, ficando o dia todo em casa sem inspiração nenhuma para querer voltar a manter uma rotina saudável, e procurando pessoas vazias no Tinder para continuar tendo uma vida vazia com outras pessoas vazias.</p>
-                <h3 class="letra-vermelha mt-5 mb-5">Você me faz bem.</h3>
+                <h3 class="letra-vermelha mt-5 mb-5">Eu sou mesmo exagerado.</h3>
 
             </div>
 
@@ -224,8 +227,8 @@
         </div>
 
         <div id="tela12" class="tela">
-            <h2 class="letra-vermelha">Essa foi nossa primeira conversa no WhatsApp</h2>
-            <p>E foi em fevereiro de 2019.</p>
+            <h2 class="letra-vermelha">E eu preciso dizer algo?</h2>
+            <p>Adoro estar na sua companhia bb❤️.</p>
 
             <img src="imagens/tela12.png" alt="">
 
