update quase pronto 21:21

--- a/index.html
+++ b/index.html
@@ -1087,9 +1087,9 @@
                         <td></td>
                         <td></td>
                         <td>1</td>
-                        <td>2</td>
+                        <td class="marcado" value="02/11/23">2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td class="marcado" value="04/11/23">4</td>
                     </tr>
                     <tr>
                         <td>5</td>
@@ -1127,78 +1127,6 @@
                         <td>31</td>
                         <td></td>
                     </tr>
-                </tbody>
-            </table>
-
-            <table class="calendario">
-                <span><strong class="text-muted">DEZEMBRO de 2023</strong></span>
-                <thead>
-                    <tr>
-                        <td>Dom</td>
-                        <td>Seg</td>
-                        <td>Ter</td>
-                        <td>Qua</td>
-                        <td>Qui</td>
-                        <td>Sex</td>
-                        <td>Sáb</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>1</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>4</td>
-                        <td>5</td>
-                        <td>6</td>
-                        <td>7</td>
-                        <td>8</td>
-                        <td>9</td>
-                    </tr>
-                    <tr>
-                        <td>10</td>
-                        <td>11</td>
-                        <td>12</td>
-                        <td>13</td>
-                        <td>14</td>
-                        <td>15</td>
-                        <td>16</td>
-                    </tr>
-                    <tr>
-                        <td>17</td>
-                        <td>18</td>
-                        <td>19</td>
-                        <td>20</td>
-                        <td>21</td>
-                        <td>22</td>
-                        <td>23</td>
-                    </tr>
-                    <tr>
-                        <td>24</td>
-                        <td>25</td>
-                        <td>26</td>
-                        <td>27</td>
-                        <td>28</td>
-                        <td>29</td>
-                        <td>30</td>
-                    </tr>
-                    <tr>
-                        <td>31</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-
                 </tbody>
             </table>
 
@@ -1257,7 +1185,7 @@
                 <p>Então...</p>
             </div>
             <div tempo="8000" final="true">
-                <p>agora, olhe nos meus olhos...</p>
+                <p>Quer assinar o contrato para mais um ano de relacionamento comigo?</p>
             </div>
         </div>
 
@@ -1272,7 +1200,7 @@
             <h2 class="mb-5" style="color: #CCC">Nesse caso, precisamos atualizar o memorial</h2>
             
             <table class="calendario">
-                <span><strong class="text-muted">Junho de 2021</strong></span>
+                <span><strong class="text-muted">Dezembro de 2023</strong></span>
                 <thead>
                     <tr>
                         <td>Dom</td>
@@ -1288,50 +1216,51 @@
                     <tr>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td>1</td>
                         <td>2</td>
+                    </tr>
+                    <tr>
                         <td>3</td>
                         <td>4</td>
                         <td>5</td>
-                    </tr>
-                    <tr>
                         <td>6</td>
                         <td>7</td>
                         <td>8</td>
                         <td>9</td>
-                        <td>10</td>
-                        <td>11</td>
-                        <td>12</td>
                     </tr>
                     <tr>
+                        <td>10</td>
+                        <td>11</td>
+                        <td class="marcado" value="12/12/23">12</td>
                         <td>13</td>
                         <td>14</td>
                         <td>15</td>
                         <td>16</td>
-                        <td>17</td>
-                        <td>18</td>
-                        <td class="marcado" value="final">19</td>
                     </tr>
                     <tr>
+                        <td>17</td>
+                        <td>18</td>
+                        <td>19</td>
                         <td>20</td>
                         <td>21</td>
                         <td>22</td>
                         <td>23</td>
+                    </tr>
+                    <tr>
                         <td>24</td>
                         <td>25</td>
                         <td>26</td>
-                    </tr>
-                    <tr>
                         <td>27</td>
                         <td>28</td>
                         <td>29</td>
                         <td>30</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
                     </tr>
                 </tbody>
             </table>
+
 
         </div>
 
